<resources>
    <string name="app_name">Event Reminder</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="text_view_about">About</string>
    <string name="text_view_settings">Settings</string>
    <string name="text_view_share">Share</string>
    <string name="text_label_profile">Profile</string>
    <string name="text_label_events">Events</string>
    <string name="text_label_holidays">Holidays</string>

    <string name="text_FAB_events">Add Event</string>
    <string name="text_hint_event_title">Event name</string>
    <string name="text_hint_event_desc">Event description</string>
    <string name="text_hint_event_date">Event date</string>
    
    <string name= "shareDescription">This app is awesome</string>

    <string name="save">Save</string>
    <string name="remove">Delete</string>
    <string name="edit">Edit</string>
</resources>