<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/new_event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/borderPaddingTop"
        android:layout_marginTop="@dimen/borderPaddingTop"
        android:layout_marginEnd="@dimen/borderPaddingTop"
        android:ems="10"
        android:hint="@string/text_hint_event_title"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/new_event_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/borderPaddingTop"
        android:layout_marginTop="@dimen/borderPaddingTop"
        android:layout_marginEnd="@dimen/borderPaddingTop"
        android:ems="10"
        android:hint="@string/text_hint_event_desc"
        android:inputType="textMultiLine"
        android:lines="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_event_title" />

    <EditText
        android:id="@+id/new_event_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/borderPaddingTop"
        android:layout_marginTop="@dimen/borderPaddingTop"
        android:layout_marginEnd="@dimen/borderPaddingTop"
        android:hint="@string/text_hint_event_date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_event_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>